--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,4 @@
 cmake_minimum_required(VERSION 3.15)
 project(truffula)
 
-set(CMAKE_CXX_STANDARD 14)
-
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
-
-add_executable(truffula src/main.cpp)
+add_subdirectory(src)
